--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,25 @@
     }
   </style>
 </head>
-
+<!-- Add this just before </body> -->
+<script>
+  // Start polling for latest data after SDK is ready
+  function startPolling() {
+    setInterval(() => {
+      if (typeof api?.getData === 'function') {
+        api.getData().then(response => {
+          if (window.dataHandler && typeof window.dataHandler.onDataChanged === 'function') {
+            window.dataHandler.onDataChanged(response.data);
+          }
+        }).catch(err => {
+          console.warn('Polling data fetch failed:', err);
+        });
+      }
+    }, 5000);
+  }
+  // Wait for DOM and SDK, then start polling
+  window.addEventListener('DOMContentLoaded', startPolling);
+</script>
 <body class="h-full min-h-screen w-full flex items-center justify-center bg-slate-100 text-slate-800" style="min-height: 100vh;">
   <!-- Reference Screenshot for Developers: <img src='/IMG_7938.png' alt='Mobile Dashboard Reference' style='max-width: 100%; display: none;' /> -->
   <div id="app" class="flex flex-col bg-white w-full max-w-[420px] min-h-screen h-full shadow-lg overflow-hidden" style="height: 100vh;"><!-- Header with Pending Collection Alert -->
@@ -1158,6 +1176,8 @@
         renderAll();
       }
     };
+    // Ensure polling and SDK use the same handler
+    window.dataHandler = dataHandler;
 
     // Migration: Add default units to orders without quantity_unit
     async function migrateOrderUnits() {
@@ -1389,6 +1409,7 @@
       showLoading(false);
     }
 
+    
     function populateMonthSelector() {
       const selector = document.getElementById('month-selector');
       const today = new Date();
@@ -3855,9 +3876,15 @@
       });
 
       container.innerHTML = Object.values(byWorker).map((data, index) => {
-        const presentCount = data.records.filter(r => r.status === 'present').length;
-        const halfDayCount = data.records.filter(r => r.status === 'half-day').length;
-        const absentCount = data.records.filter(r => r.status === 'absent').length;
+        // Only count the last status per day for each worker
+        const recordsByDate = {};
+        data.records.forEach(r => {
+          recordsByDate[r.date] = r; // Overwrite, so last record for date remains
+        });
+        const lastRecords = Object.values(recordsByDate);
+        const presentCount = lastRecords.filter(r => r.status === 'present').length;
+        const halfDayCount = lastRecords.filter(r => r.status === 'half-day').length;
+        const absentCount = lastRecords.filter(r => r.status === 'absent').length;
         const worker = data.worker;
         const workerId = worker.__backendId;
 
