--- a/public/index.html
+++ b/public/index.html
@@ -3859,6 +3859,11 @@
         const worker = data.worker;
         const workerId = worker.__backendId;
 
+        // Calculate attendance counts for this worker
+        const presentCount = data.records.filter(r => r.status === 'present').length;
+        const halfDayCount = data.records.filter(r => r.status === 'half-day').length;
+        const absentCount = data.records.filter(r => r.status === 'absent').length;
+
         // Get the month from records for salary calculation
         const month = data.records.length > 0 && data.records[0].date
           ? data.records[0].date.substring(0, 7)
@@ -4442,7 +4447,10 @@
       // If type is 'all', show all workers (no additional filtering)
 
       // Update summary cards
-      // ...existing code...
+      const uniqueWorkers = [...new Set(workers.map(w => w.worker_name))].length;
+      const totalOutput = workers.reduce((sum, w) => sum + (w.units_produced || 0), 0);
+      const totalHours = workers.reduce((sum, w) => sum + (w.hours_worked || 0), 0);
+      const avgProductivity = totalHours > 0 ? (totalOutput / totalHours) : 0;
 
       // Get monthly wages from households
       const householdWages = getFilteredData(allData.filter(d => d.type === 'household' && d.category === 'Worker Wages'));
