--- a/public/index.html
+++ b/public/index.html
@@ -3859,14 +3859,19 @@
         const worker = data.worker;
         const workerId = worker.__backendId;
 
-        // Calculate attendance counts for this worker
-        const presentCount = data.records.filter(r => r.status === 'present').length;
-        const halfDayCount = data.records.filter(r => r.status === 'half-day').length;
-        const absentCount = data.records.filter(r => r.status === 'absent').length;
+        // Only count the last status per day for each worker
+        const recordsByDate = {};
+        data.records.forEach(r => {
+          recordsByDate[r.date] = r; // Overwrite, so last record for date remains
+        });
+        const lastRecords = Object.values(recordsByDate);
+        const presentCount = lastRecords.filter(r => r.status === 'present').length;
+        const halfDayCount = lastRecords.filter(r => r.status === 'half-day').length;
+        const absentCount = lastRecords.filter(r => r.status === 'absent').length;
 
         // Get the month from records for salary calculation
-        const month = data.records.length > 0 && data.records[0].date
-          ? data.records[0].date.substring(0, 7)
+        const month = lastRecords.length > 0 && lastRecords[0].date
+          ? lastRecords[0].date.substring(0, 7)
           : new Date().toISOString().substring(0, 7);
 
         // Build calendar view if dateRange is provided
@@ -3876,7 +3881,7 @@
             <div class="border-t border-slate-200 pt-3 mt-3">
               <div class="grid grid-cols-7 gap-1">
                 ${dateRange.dates.map(dateStr => {
-            const record = data.records.find(r => r.date === dateStr);
+            const record = lastRecords.find(r => r.date === dateStr);
             const status = record?.status;
             const date = new Date(dateStr);
             const day = date.getDate();
@@ -4497,7 +4502,8 @@
       });
 
       // Render grouped by worker
-      // This function does not use dateRange, so we remove any reference to it.
+      // Ensure dateRange is defined to avoid ReferenceError
+      const dateRangeSafe = typeof dateRange !== 'undefined' ? dateRange : null;
       container.innerHTML = Object.values(byWorker).map((data, index) => {
         const worker = data.worker;
         const workerId = worker.__backendId;
@@ -4514,11 +4520,11 @@
 
         // Build calendar view if dateRange is provided
         let calendarHTML = '';
-        if (dateRange && dateRange.dates && dateRange.dates.length > 0) {
+        if (dateRangeSafe && dateRangeSafe.dates && dateRangeSafe.dates.length > 0) {
           calendarHTML = `
             <div class="border-t border-slate-200 pt-3 mt-3">
               <div class="grid grid-cols-7 gap-1">
-                ${dateRange.dates.map(dateStr => {
+                ${dateRangeSafe.dates.map(dateStr => {
             const record = data.records.find(r => r.date === dateStr);
             const status = record?.status;
             const date = new Date(dateStr);
